<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Note</string>
    <string name="action_settings">Settings</string>
    <string name="context_hint_text">Content</string>
    <string name="title_hint_text">Title</string>
    <string name="title_notes">Notes</string>
    <string name="title_add_note">Add a note</string>
    <string name="untitled_text">Untitled</string>
    <string name="action_refresh">Refresh</string>
    <string name="undo_text">Note deleted</string>
    <string name="empty_notes_list">Notes you add appear here</string>
    <string name="edit_text_email">E-mail</string>
    <string name="edit_text_password">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="logoImageViewText">logo</string>
    <string name="action_sign_out">Sign out</string>
    <string name="title_account_category">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="have_account_text">Already have account?</string>
    <string name="dont_have_account_text">Don\'t have account?</string>
    <string name="sign_up_text">Sign Up</string>

</resources>
