<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paulzin.justnote.fragments.SignInFragment">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logoImageViewText"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary" />
    </LinearLayout>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/accent"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="2sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/sign_in_text"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textColor="@color/primary_light"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="16dp" />

</RelativeLayout>
